// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.securecomputation.controlplane;

import "wfa/measurement/internal/securecomputation/controlplane/work_item.proto";

option java_package = "org.wfanet.measurement.internal.securecomputation.controlplane";
option java_multiple_files = true;
option java_outer_classname = "WorkItemsServiceProto";

// Internal service for persistence of `WorkItem` entities.
service WorkItems {

  rpc CreateWorkItem(CreateWorkItemRequest) returns (WorkItem);

  rpc GetWorkItem(GetWorkItemRequest) returns (WorkItem);

  rpc StreamWorkItems(StreamWorkItemsRequest) returns (stream WorkItem);

  rpc FailWorkItem(FailWorkItemRequest) returns (WorkItem);
}

message CreateWorkItemRequest {
  WorkItem work_item = 1;
}

message GetWorkItemRequest {
  fixed64 work_item_resource_id = 1;
}

message StreamWorkItemsRequest {
  message Filter {
    fixed64 work_item_resource_id_after = 1;
  }
  Filter filter = 1;

  int32 limit = 2;
}

message FailWorkItemRequest {
  fixed64 work_item_resource_id = 1;
}